--- a/src/app/addproject/addproject.page.html
+++ b/src/app/addproject/addproject.page.html
@@ -1,23 +1,38 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Nuevo Proyecto</ion-title>
-    <ion-buttons slot="primary">
-		<ion-back-button color="tertiary" fill="outline">
-			<ion-icon name="arrow-round-back"></ion-icon>
-		</ion-back-button>
-		
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
 
-	<ion-item>
-		<ion-label position="floating"> Nombre </ion-label>
-		<ion-input type="text" [(ngModel)]="name_project" required></ion-input>
-	</ion-item>
+	<ion-slide>
+		<div class="contaier-login">
+			<ion-grid>
+				<ion-row>
+					<ion-col>
+						<h1>Proyecto</h1>
+					</ion-col>
+					
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-list>
 
-	<ion-button expand="block" padding color="tertiary" *ngIf="!id" (click)="addProcess()" fill="outline">Añadir</ion-button>
-	<ion-button expand="block" padding color="tertiary" *ngIf="id>=1" (click)="updateProcess()" fill="outline">Actualizar</ion-button>
+							<ion-item>
+								<ion-input placeholder="Nombre" type="text" [(ngModel)]="name_project" required></ion-input>
+							</ion-item>
+	
+						</ion-list>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-button expand="block" padding color="tertiary" *ngIf="!id" (click)="addProcess()" fill="outline">Añadir</ion-button>
+						<ion-button expand="block" padding color="tertiary" *ngIf="id>=1" (click)="updateProcess()" fill="outline">Actualizar</ion-button>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-button expand="full" fill="outline" (click)="toProjects()">Volver</ion-button>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		</div>
+	</ion-slide>
 
 </ion-content>
