--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,26 +1,41 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-	<ion-list>
-
-	  <ion-item>
-	    <ion-label position="floating">Usuario</ion-label>
-	    <ion-input type="text" [(ngModel)]="username"></ion-input>
-	  </ion-item>
-
-	  <ion-item>
-	    <ion-label position="floating">Contraseña</ion-label>
-	    <ion-input type="password" [(ngModel)]="password"></ion-input>
-	  </ion-item>
-
-	</ion-list>
-
-	<div>
-	  <ion-button expand="block" padding color="tertiary" (click)="accessLogin()">Iniciar Sesión</ion-button>
-	  <ion-button expand="block" padding color="tertiary" fill="outline" (click)="formRegister()">Registrarse</ion-button>
-	</div>
+	<ion-slide>
+		<div class="contaier-login">
+			<ion-grid>
+				<ion-row>
+					<ion-col>
+						<h1>Iniciar Sesión</h1>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-list>
+	
+							<ion-item>
+								<ion-input  [(ngModel)]="username" name="username" type="text" required placeholder="Usuario"></ion-input>
+							</ion-item>
+							<br />
+							<ion-item>
+								<ion-input [(ngModel)]="password" name="password" type="password" required placeholder="Contraseña"></ion-input>
+							</ion-item>
+	
+						</ion-list>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-button  type="submit" fill="solid" expand="full" color="tertiary" (click)="accessLogin()">Iniciar Sesión</ion-button>
+						
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-label>
+							<ion-button expand="full" fill="outline" (click)="formRegister()">Registrarse</ion-button>
+						</ion-label>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		</div>
+	</ion-slide>
 </ion-content>
