--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,36 +1,45 @@
-<ion-header>
-	<ion-toolbar>
-		<ion-title>Registro</ion-title>
-		<ion-buttons slot="primary">
-			<ion-back-button color="tertiary" fill="outline">
-				<ion-icon name="arrow-round-back"></ion-icon>
-			</ion-back-button>
-
-		</ion-buttons>
-	</ion-toolbar>
-</ion-header>
-
 <ion-content>
-	<ion-list>
+	<ion-slide>
+		<div class="contaier-login">
+			<ion-grid>
+				<ion-row>
+					<ion-col>
+						<h1>Registro</h1>
+					</ion-col>
+					
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-list>
 
-		<ion-item>
-			<ion-label position="floating">Usuario</ion-label>
-			<ion-input type="text" [(ngModel)]="username"></ion-input>
-		</ion-item>
+							<ion-item>
+								<ion-input type="text"  placeholder="Usuario" [(ngModel)]="username"></ion-input>
+							</ion-item>
+							<br>
+							<ion-item>
+								<ion-input type="password" placeholder="Contraseña" [(ngModel)]="password"></ion-input>
+							</ion-item>
+							<br>
+							<ion-item>
+								<ion-input type="password"  placeholder="Confirmar contraseña" [(ngModel)]="confirm_password"></ion-input>
+							</ion-item>
+	
+						</ion-list>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-button expand="block" padding color="tertiary" (click)="prosesRegister()">Registrarse</ion-button>
+						
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-button expand="full" fill="outline" (click)="toLogin()">Volver</ion-button>
 
-		<ion-item>
-			<ion-label position="floating">Contraseña</ion-label>
-			<ion-input type="password" [(ngModel)]="password"></ion-input>
-		</ion-item>
-
-		<ion-item>
-			<ion-label position="floating">Confirmar contraseña </ion-label>
-			<ion-input type="password" [(ngModel)]="confirm_password"></ion-input>
-		</ion-item>
-
-	</ion-list>
-
-	<div>
-		<ion-button expand="block" padding color="tertiary" (click)="prosesRegister()">Registrarse</ion-button>
-	</div>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		</div>
+	</ion-slide>
 </ion-content>
