--- a/src/app/updatetable/updatetable.page.html
+++ b/src/app/updatetable/updatetable.page.html
@@ -1,22 +1,35 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Actualizar Tabla</ion-title>
-    <ion-buttons slot="primary">
-		<ion-back-button color="tertiary" fill="outline">
-			<ion-icon name="arrow-round-back"></ion-icon>
-		</ion-back-button>
-		
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+	<ion-slide>
+		<div class="contaier-login">
+			<ion-grid>
+				<ion-row>
+					<ion-col>
+						<h1>Actualizar Tabla</h1>
+					</ion-col>
+					
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-list>
 
-	<ion-item>
-		<ion-label position="floating"> Nombre </ion-label>
-		<ion-input type="text" [(ngModel)]="name_table" required></ion-input>
-	</ion-item>
-
-	<ion-button expand="block" padding color="tertiary" *ngIf="!name_table == ''" (click)="updateProcess()" fill="outline">Actualizar</ion-button>
-
+							<ion-item>
+								<ion-input placeholder="Nombre" type="text" [(ngModel)]="name_table" required></ion-input>
+							</ion-item>
+	
+						</ion-list>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-button expand="block" padding color="tertiary" *ngIf="!name_table == ''" (click)="updateProcess()" fill="outline">Actualizar</ion-button>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col>
+						<ion-button expand="full" fill="outline" (click)="goBack()">Volver</ion-button>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		</div>
+	</ion-slide>
 </ion-content>
